move sar to the low level elastic rest client